--- a/estilo.css
+++ b/estilo.css
@@ -4,10 +4,28 @@ h1{
 	font-family: sans-serif;
 }
 
+h2{
+	text-align:center;
+	font-family:sans-serif;
+}
+
+
 body{
 	background-color: rgb(173, 216, 230);
 }
 
+#tabla-pri{
+	margin:20px;
+}
 #principal-image{
 	text-align:center;
 }
+
+
+#presentacion{
+	font-family:sans-serif;
+	font-size:20px;
+	text-align:justify;
+	margin:20px;
+}
+
